--- a/inicio.html
+++ b/inicio.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="inicio.css">
     <link rel="stylesheet" href="bootstrap.css">
 
-
+<h1>hola</h1>
 </head>
   <body style="background-color:rgb(25, 6, 48)">
       
