--- a/favoritos.html
+++ b/favoritos.html
@@ -38,49 +38,15 @@
                     <!--BOTON Mensajes -->
                         <a class="nav-link" href="mensajes.html"> <i class="fa fa-comment" aria-hidden="true"></i> Mensajes</a>
                     </li>
+                 <li class="nav-item">
+                      <!--BOTON Configuración -->
+                        <a class="nav-link" href="Configuración.html"> <i class="fa fa-cog" aria-hidden="true"></i> Configuración</a>
+                     </li>
             </ul>
         </div>
     </nav>
+    
     <table class="tabla_principal">
-        <tr class="tabla_titulos">
-                <td class="columna_perfil" rowspan="2">
-                    <div class="carta_perfil">
-                        <h4 class="card-title">Tus preferencias de búsqueda</h4>
-                        <hr>
-                        <form>
-                            <div class="form-group">
-                                <label for="Sexo">Especie</label>
-                                <div class="input-group"></div>
-                                <div class= "input-group-prepend">
-                                    <span class="input-group-text" id="basic-addon1"> <i class="fas fa-bug"></i></span>
-                                    <select class="custom-select" id="Sexo">
-                                        <option value="1">Perro</option>
-                                        <option value="2">Gato</option>
-                                        <option value="3">Ave</option>
-                                        <option value="4">Reptil</option>
-                                        <option value="5">Roedor</option>
-                                        <option value="6">Arácnido</option>
-                                        <option value="7">Pez</option>
-                                        <option value="8">Otro</option>
-                                    </select>
-                                </div>
-                            </div>
-                            <hr>
-                            <div class="form-group">
-                                <label for="distancia">Rango de distancia</label>
-                                <input type="range" class="form-control-range" id="distancia" name="distancia" value="50" min="1" max="100">
-                                <output for="distancia" onforminput="value = foo.valueAsNumber;"></output>
-                            </div>
-                            <hr>
-                            <h6>Ubicación</>
-                            <h6>Zapopan, Jalisco, México</h6>
-                        </form>
-                    </div>
-                </td>
-            <td>
-                <p align="center">Tus mascotas favoritas</p>
-            </td>
-        </tr>
         <tr>
             <td class="columna_mascotas" style="width:65%">
                 <table class="tabla_favoritos">
