Actualización de nav bar

--- a/mensajes.html
+++ b/mensajes.html
@@ -50,6 +50,10 @@
 						<!--BOTON Mensajes -->
 						<a class="nav-link active" href="mensajes.html"> <i class="fa fa-comment" aria-hidden="true"></i> Mensajes</a>
 					</li>
+					<li class="nav-item">
+						<!--BOTON Configuración -->
+						<a class="nav-link" href="Configuración.html"> <i class="fa fa-cog" aria-hidden="true"></i> Configuración</a>
+					</li>
 				</ul>
 			</div>
 		</nav>
