--- a/inicio.html
+++ b/inicio.html
@@ -93,7 +93,7 @@
               </button>
             </div>
             <div class="modal-body">
-              <form action="" id="reg" >
+              <form action="" id="ModReg" >
               <div class="row">
                   <div class="col-6">
                     <input type="text" name="RegNombre" id="RegNombre" class="form-control" placeholder="Nombre o nombres" aria-describedby="helpId" required>
@@ -134,7 +134,7 @@
     
                   <input type="url" name="RegUrl" id="RegUrl" class="form-control mt-3" placeholder="Url de imagen de perfil" aria-describedby="helpId">
 
-                <button type="submit" class="btn btn-success mt-3" id="btnRegistro" disabled>Registrarse</button>
+                <button type="submit" class="btn btn-success mt-3" id="btnRegistro">Registrarse</button>
                  <button type="button" class="btn btn-secondary mt-3" data-dismiss="modal">Close</button>
               
                 </form>
