--- a/Configuración.html
+++ b/Configuración.html
@@ -125,7 +125,7 @@
                         <output for="distancia" onforminput="value = foo.valueAsNumber;"></output>
                     </div>
                     <hr>
-                    <h6>Ubicación</>
+                    <h6>Ubicación</h6>
                     <h6>Zapopan, Jalisco, México</h6>
                 </form>
             </div>
