--- a/inicio.html
+++ b/inicio.html
@@ -37,7 +37,7 @@
             <br>
             <br>
             <button type="button" id ="BtnModalRegistro" class="btn btn-light" data-toggle="modal" data-target="#model2"> Registrate</button>
-            <button type="button" class="btn btn-light" data-toggle="modal" data-target="#model1"> Inicia Sesión</button>
+            <button type="button" id ="BtnModalLogin"class="btn btn-light" data-toggle="modal" data-target="#model1"> Inicia Sesión</button>
         </div>
     </div>
     
@@ -58,7 +58,7 @@
                         <div class= "input-group-prepend">
                             <span class="input-group-text" id="basic-addon1"> <i class="fas fa-user"></i></span>
                         </div>
-                    <input type="email" name="Correo" id="Correo1" class="form-control" placeholder="Correo Registrado" aria-describedby="helpId">
+                    <input type="email" name="Correo" id="login_correo" class="form-control" placeholder="Correo Registrado" aria-describedby="helpId">
                     </div>
                     </div>
                     <div class="form-group form">
@@ -67,10 +67,10 @@
                         <div class= "input-group-prepend">
                             <span class="input-group-text" id="basic-addon1"> <i class="fas fa-key"></i></span>
                         </div>
-                    <input type="password" name="Contraseña" id="Contra1" class="form-control" placeholder="Contraseña Registrada" aria-describedby="helpId">
+                    <input type="password" name="Contraseña" id="login_password" class="form-control" placeholder="Contraseña Registrada" aria-describedby="helpId">
                         </div>
                     </div>
-                    <button type="button" class="btn btn-light" data-dismiss="modal">Login</button>
+                    <button type="button" id="btnLogin" class="btn btn-light" data-dismiss="modal">Login</button>
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
                     <hr>
                     <p text-align="left" style="font-size: small;">
