Principal_config button

--- a/principal.html
+++ b/principal.html
@@ -38,6 +38,9 @@
                     <!--BOTON Mensajes -->
                         <a class="nav-link" href="mensajes.html"> <i class="fa fa-comment" aria-hidden="true"></i> Mensajes</a>
                     </li>
+                    <!--BOTON Configuración -->
+                    <a class="nav-link" href="Configuración.html"> <i class="fa fa-cog" aria-hidden="true"></i> Configuración</a>
+                </li>
             </ul>
         </div>
     </nav>
