--- a/Configuración.html
+++ b/Configuración.html
@@ -40,7 +40,7 @@
                     </li>
                 <li class="nav-item">
                     <!--BOTON Configuración -->
-                       <a class="nav-link" href="Configuración.html"> <i class="fa fa-cog" aria-hidden="true"></i> Configuración</a>
+                       <a class="nav-link active" href="Configuración.html"> <i class="fa fa-cog" aria-hidden="true"></i> Configuración</a>
                      </li>
             </ul>
         </div>
@@ -94,6 +94,15 @@
                         </div>
                     <hr>
                 </form>
+                <div class="button">
+                      <a class="btn btn-primary btn-lg" href="#" role="button" id="btnGuardar">Guardar</a>
+                  </div>
+                  <div class="button">
+                    <a class="btn btn-primary btn-lg" href="#" role="button" id="btnEliminar">Eliminar perfil</a>
+                </div>
+                <div class="button">
+                    <a class="btn btn-primary btn-lg" href="#" role="button" id="btnCancelar">Cancelar</a>
+                </div>
             </div>
         </td>
         <td class="columna_perfil" valign="top">
