--- a/perfil.html
+++ b/perfil.html
@@ -56,7 +56,7 @@
         <tr>
             <td class="columna_perfil">
                 <div class="carta_perfil">
-                    <p align="right"><a href="#editar_perfil">Editar</a></p>
+                    <p align="right"><a href="Configuración.html">Editar</a></p>
                     <img class ="imagen_perfil" src="https://ximg.es/300.png/09f/fff" alt="">
                     <div class="carta-perfil-body">
                         <h4 class="card-title">Nombre</h4>
