--- a/Configuración.html
+++ b/Configuración.html
@@ -59,7 +59,7 @@
                             <div class= "input-group-prepend">
                                 <span class="input-group-text" id="basic-addon1"> <i class="fas fa-address-card"></i></span>
                             </div>
-                        <input type="text" name="NombreP" id="NombreP" class="form-control" placeholder="Francisco" aria-describedby="helpId">
+                        <input type="text" name="NombreP" id="NombreP" class="form-control" aria-describedby="helpId">
                         </div>
                         </div>
                     <hr>
@@ -69,7 +69,7 @@
                             <div class= "input-group-prepend">
                                 <span class="input-group-text" id="basic-addon1"> <i class="fas fa-address-card"></i></span>
                             </div>
-                        <input type="text" name="ApellidoP" id="ApellidoP" class="form-control" placeholder="Hernandez Ortiz" aria-describedby="helpId">
+                        <input type="text" name="ApellidoP" id="ApellidoP" class="form-control"  aria-describedby="helpId">
                         </div>
                         </div>
                     <hr>
@@ -79,9 +79,29 @@
                             <div class= "input-group-prepend">
                                 <span class="input-group-text" id="basic-addon1"> <i class="fas fa-envelope"></i></span>
                             </div>
-                        <input type="text" name="CorreoP" id="CorreoP" class="form-control" placeholder="francisco123@email.com" aria-describedby="helpId">
+                        <input type="text" name="CorreoP" id="CorreoP" class="form-control" aria-describedby="helpId">
                         </div>
+                    </div>
+                    <hr>
+                    <div class="form-group form">
+                        <label for="Nombre">Contraseña</label>
+                        <div class="input-group">
+                            <div class= "input-group-prepend">
+                                <span class="input-group-text" id="basic-addon1"> <i class="fas fa-key"></i></span>
+                            </div>
+                        <input type="password" name="PasswordP" id="PasswordP" class="form-control" aria-describedby="helpId">
                         </div>
+                    </div>
+                    <hr>
+                    <div class="form-group form">
+                        <label for="Nombre">Confirmar Contraseña</label>
+                        <div class="input-group">
+                            <div class= "input-group-prepend">
+                                <span class="input-group-text" id="basic-addon1"> <i class="fas fa-key"></i></span>
+                            </div>
+                        <input type="password" name="PassConfP" id="PassConfP" class="form-control" aria-describedby="helpId">
+                        </div>
+                    </div>
                     <hr>
                     <div class="form-group form">
                         <label for="Nombre">Telefono</label>
@@ -89,13 +109,13 @@
                             <div class= "input-group-prepend">
                                 <span class="input-group-text" id="basic-addon1"> <i class="fas fa-phone"></i></span>
                             </div>
-                        <input type="text" name="TelP" id="TelP" class="form-control" placeholder="3315489647" aria-describedby="helpId">
+                        <input type="text" name="TelP" id="TelP" class="form-control" aria-describedby="helpId">
                         </div>
                         </div>
                     <hr>
                 </form>
                 <div class="button">
-                      <a class="btn btn-primary btn-lg" href="#" role="button" id="btnGuardar">Guardar</a>
+                      <a class="btn btn-primary btn-lg" href="#" role="button" id="btnGuardar" onclick="ActualizarUsuario()">Guardar</a>
                   </div>
                   <div class="button">
                     <a class="btn btn-primary btn-lg" href="#" role="button" id="btnEliminar">Eliminar perfil</a>
