--- a/perfil.html
+++ b/perfil.html
@@ -55,20 +55,7 @@
         </tr>
         <tr>
             <td class="columna_perfil">
-                <div class="carta_perfil">
-                    <p align="right"><a href="Configuración.html">Editar</a></p>
-                    <img class ="imagen_perfil" src="https://ximg.es/300.png/09f/fff" alt="">
-                    <div class="carta-perfil-body">
-                        <h4 class="card-title">Nombre</h4>
-                        <hr>
-                        <i class="fa fa-handshake" aria-hidden="true"></i> 3 acomodos exitosos
-                        <hr>
-                        <i class="fa fa-envelope" aria-hidden="true"></i> correo@prueba.com
-                        <hr>
-                        <i class="fa fa-phone" aria-hidden="true"></i> 3312941712
-                        <hr>
-                        <i class="fa fa-map-marker" aria-hidden="true"></i> Zapopan, Jalisco
-                    </div>
+                <div class="carta_perfil" id="carta_perfil">   
                 </div>
             </td>
             <td class="columna_mascotas">
@@ -192,6 +179,7 @@
 
 
     <!-- Optional JavaScript -->
+    <script src="perfil.js"></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
