--- a/Configuración.html
+++ b/Configuración.html
@@ -111,7 +111,17 @@
                             </div>
                         <input type="text" name="TelP" id="TelP" class="form-control" aria-describedby="helpId">
                         </div>
+                    </div>
+                    <hr>
+                    <div class="form-group form">
+                        <label for="Nombre">Imagen URL</label>
+                        <div class="input-group">
+                            <div class= "input-group-prepend">
+                                <span class="input-group-text" id="basic-addon1"> <i class="fas fa-portrait"></i></span>
+                            </div>
+                        <input type="text" name="urlP" id="urlP" class="form-control" aria-describedby="helpId">
                         </div>
+                    </div>
                     <hr>
                 </form>
                 <div class="button">
