--- a/perfil.html
+++ b/perfil.html
@@ -60,7 +60,7 @@
             </td>
             <td class="columna_mascotas">
                 <!-- Carta -->
-                <div class="card">
+                <div class="card" id="carta_mascota">
                     <!-- Carrusel mascotas -->
                     <div class="carrusel_padre">
                         <div id="carouselId" class="carousel slide" data-ride="carousel" >
@@ -82,18 +82,18 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card-body">
-                        <h4 class="card-title">Nombre</h4>
+                    <!-- <div class="card-body">
+                        <h4 class="card-title" id="nombre" >Nombre</h4>
                         <hr>
-                        <i class="fa fa-info-circle" aria-hidden="true"></i> Soy un perro muy juguetón, alegre y curioso. Me gustaría encontrar un hogar lo más pronto posible.
+                        <i class="fa fa-info-circle" aria-hidden="true" id="descripcion"></i> Soy un perro muy juguetón, alegre y curioso. Me gustaría encontrar un hogar lo más pronto posible.
                         <hr>
-                        <i class="fa fa-venus-mars" aria-hidden="true"></i> Macho
+                        <i class="fa fa-venus-mars" aria-hidden="true" ></i> Macho
                         <hr>
                         <i class="fa fa-birthday-cake" aria-hidden="true"></i> 20/03/20
                         <hr>
                     <i class="fa fa-map-marker" aria-hidden="true"></i> Zapopan, Jalisco
                     </div>
-                </div>
+                </div> -->
             </td>
             <td class="columna_añadir">
                 <button id="btn_plus"type="button" class="btn btn-light btn-circle btn-xl" data-toggle="modal" data-target="#model3"><i class="fa fa-plus fa-3x"></i></button>
