--- a/Configuración.html
+++ b/Configuración.html
@@ -158,11 +158,28 @@
                         </div>
                     </div>
                     <hr>
-                    <div class="form-group">
+                    <div class="radioB mt-3 border">
+
+                        <div class="form-check">
+                            <label class="form-check-label ml-3">
+                                <input type="checkbox" class="form-check-input sexoF" name="sexo" id="sexoF" value="M"  >
+                                Hembra
+                            </label>
+                        </div>
+      
+                        <div class="form-check">
+                            <label class="form-check-label ml-3">
+                                <input type="checkbox" class="form-check-input sexoM" name="sexo" id="sexoM" value="H" >
+                                Macho
+                            </label>
+                        </div>
+                    </div>
+      
+                    <!-- <div class="form-group">
                         <label for="distancia">Edad</label>
                         <input type="range" class="form-control-range" id="distancia" name="distancia" value="50" min="1" max="100">
                         <output for="distancia" onforminput="value = foo.valueAsNumber;"></output>
-                    </div>
+                    </div> -->
                     <hr>
                     <h6>Ubicación</h6>
                     <h6>Zapopan, Jalisco, México</h6>
