--- a/Configuración.html
+++ b/Configuración.html
@@ -153,7 +153,8 @@
                                 <option value="5">Roedor</option>
                                 <option value="6">Arácnido</option>
                                 <option value="7">Pez</option>
-                                <option value="8">Otro</option>
+                                <option value="8">Todo</option>
+                                <option value="9">Otro</option>
                             </select>
                         </div>
                     </div>
