--- a/principal.html
+++ b/principal.html
@@ -46,39 +46,7 @@
     </nav>
 
     <!-- Carta -->
-    <div class="card">
-        <!-- Carrusel mascotas -->
-        <div class="carrusel_padre">
-            <div id="carouselId" class="carousel slide" data-ride="carousel" >
-                <ol class="carousel-indicators">
-                    <li data-target="#carouselId" data-slide-to="0" class="active"></li>
-                    <li data-target="#carouselId" data-slide-to="1"></li>
-                    <li data-target="#carouselId" data-slide-to="2"></li>
-                </ol>
-                <div class="carousel-inner" role="listbox">
-                    <div class="carousel-item active">
-                        <img class="imagen_carta" src="https://ximg.es/300.png/09f/fff">
-                    </div>
-                    <div class="carousel-item">
-                        <img class="imagen_carta" src="https://ximg.es/300.png/09f/fff" >
-                    </div>
-                    <div class="carousel-item">
-                        <img class="imagen_carta" src="https://ximg.es/300.png/09f/fff">
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="card-body">
-            <h4 class="card-title">Nombre</h4>
-            <hr>
-            <i class="fa fa-info-circle" aria-hidden="true"></i> Soy un perro muy juguetón, alegre y curioso. Me gustaría encontrar un hogar lo más pronto posible.
-            <hr>
-            <i class="fa fa-venus-mars" aria-hidden="true"></i> Macho
-            <hr>
-            <i class="fa fa-birthday-cake" aria-hidden="true"></i> 20/03/20
-            <hr>
-        <i class="fa fa-map-marker" aria-hidden="true"></i> Zapopan, Jalisco
-        </div>
+    <div class="card" id ="carta_mascota">
     </div>
     <!-- Botones dislike, superlike, like -->
     <div class="botones_likes">
