--- a/perfil.html
+++ b/perfil.html
@@ -169,7 +169,7 @@
                         </div>
                     </div>
                     <hr>
-                    <button type="submit" class="btn btn-light" data-dismiss="modal">Añadir</button>
+                    <button type="submit" class="btn btn-light" data-dismiss="modal" id="submitM">Añadir</button>
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
                 </div>
             </div>
