--- a/perfil.html
+++ b/perfil.html
@@ -62,7 +62,7 @@
                 <!-- Carta -->
                 <div class="card" id="carta_mascota">
                     <!-- Carrusel mascotas -->
-                    <div class="carrusel_padre">
+                    <!-- <div class="carrusel_padre">
                         <div id="carouselId" class="carousel slide" data-ride="carousel" >
                             <ol class="carousel-indicators">
                                 <li data-target="#carouselId" data-slide-to="0" class="active"></li>
@@ -81,7 +81,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <!-- <div class="card-body">
                         <h4 class="card-title" id="nombre" >Nombre</h4>
                         <hr>
@@ -136,7 +136,7 @@
                         <div class= "input-group-prepend">
                             <span class="input-group-text" id="basic-addon1"> <i class="fas fa-paw"></i></span>
                         </div>
-                    <input type="text" name="Nombre" id="NombreM" class="form-control" placeholder="Nombre de tu mascota" aria-describedby="helpId">
+                    <input type="text" name="Nombre" id="nombreM" class="form-control" placeholder="Nombre de tu mascota" aria-describedby="helpId">
                     </div>
                     </div>
                     <div class="form-group form">
