--- a/principal.html
+++ b/principal.html
@@ -36,7 +36,7 @@
                 </li>
                 <li class="nav-item">
                     <!--BOTON Mensajes -->
-                        <a class="nav-link" href="mensajes.html"> <i class="fa fa-comment" aria-hidden="true"></i> Mensajes</a>
+                        <a class="nav-link" href="mensajes.html"> <i class="fa fa-comment" aria-hidden="true"></i> Adopciones</a>
                     </li>
                     <!--BOTON Configuración -->
                     <a class="nav-link" href="Configuración.html"> <i class="fa fa-cog" aria-hidden="true"></i> Configuración</a>
