--- a/mensajes.html
+++ b/mensajes.html
@@ -48,7 +48,7 @@
 					</li>
 					<li class="nav-item">
 						<!--BOTON Mensajes -->
-						<a class="nav-link active" href="mensajes.html"> <i class="fa fa-comment" aria-hidden="true"></i> Adopciones</a>
+						<a class="nav-link active" href="mensajes.html"> <i class="fa fa-paw" aria-hidden="true"></i> Adopciones</a>
 					</li>
 					<li class="nav-item">
 						<!--BOTON Configuración -->
