--- a/Configuración.html
+++ b/Configuración.html
@@ -36,7 +36,7 @@
                 </li>
                 <li class="nav-item">
                     <!--BOTON Mensajes -->
-                        <a class="nav-link" href="mensajes.html"> <i class="fa fa-comment" aria-hidden="true"></i> Mensajes</a>
+                        <a class="nav-link" href="mensajes.html"> <i class="fa fa-paw" aria-hidden="true"></i> Adopciones</a>
                     </li>
                 <li class="nav-item">
                     <!--BOTON Configuración -->
