--- a/favoritos.html
+++ b/favoritos.html
@@ -45,87 +45,11 @@
             </ul>
         </div>
     </nav>
-    <div id="favs" style="padding-left:40%">
-        <button class="btn_fav" data-toggle="modal" data-target="#model4">
-            <!-- Carta horizontal -->
-            <div class="card_reduc">
-                <!-- Carrusel mascotas -->
-                <div class="carrusel_padre">
-                    <div id="carouselId" class="carousel slide" data-ride="carousel" >
-                        <ol class="carousel-indicators">
-                            <li data-target="#carouselId" data-slide-to="0" class="active"></li>
-                            <li data-target="#carouselId" data-slide-to="1"></li>
-                            <li data-target="#carouselId" data-slide-to="2"></li>
-                        </ol>
-                        <div class="carousel-inner" role="listbox">
-                            <div class="carousel-item active">
-                                <img class="imagen_carta" src="https://ximg.es/300.png/09f/fff">
-                            </div>
-                            <div class="carousel-item">
-                                <img class="imagen_carta" src="https://ximg.es/300.png/09f/fff" >
-                            </div>
-                            <div class="carousel-item">
-                                <img class="imagen_carta" src="https://ximg.es/300.png/09f/fff">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </button>
-    </div>
-    <!-- Modal 3 Añadir Mascota -->
-    <div class="modal fade" id="model4" tabindex="-1" role="dialog" aria-labelledby="modelTitleId" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-body">
-                <!-- Carta -->
-                <div class="card_fav">
-                    <!-- Carrusel mascotas -->
-                    <div class="carrusel_padre">
-                        <div id="carouselId" class="carousel slide" data-ride="carousel" >
-                            <ol class="carousel-indicators">
-                                <li data-target="#carouselId" data-slide-to="0" class="active"></li>
-                                <li data-target="#carouselId" data-slide-to="1"></li>
-                                <li data-target="#carouselId" data-slide-to="2"></li>
-                            </ol>
-                            <div class="carousel-inner" role="listbox">
-                                <div class="carousel-item active">
-                                    <img class="imagen_carta" src="https://ximg.es/300.png/09f/fff">
-                                </div>
-                                <div class="carousel-item">
-                                    <img class="imagen_carta" src="https://ximg.es/300.png/09f/fff" >
-                                </div>
-                                <div class="carousel-item">
-                                    <img class="imagen_carta" src="https://ximg.es/300.png/09f/fff">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card-body">
-                        <h4 class="card-title">Nombre</h4>
-                        <hr>
-                        <i class="fa fa-info-circle" aria-hidden="true"></i> Soy un perro muy juguetón, alegre y curioso. Me gustaría encontrar un hogar lo más pronto posible.
-                        <hr>
-                        <i class="fa fa-venus-mars" aria-hidden="true"></i> Macho
-                        <hr>
-                        <i class="fa fa-birthday-cake" aria-hidden="true"></i> 20/03/20
-                        <hr>
-                    <i class="fa fa-map-marker" aria-hidden="true"></i> Zapopan, Jalisco
-                    </div>
-                </div>
-                </div>
-                <div class="botones_likes" style="padding-left: 60px; padding-bottom: 20px;">
-                    <button id="btn_superlike" type="button" class="btn btn-info btn-circle btn-xl btn_superlike" title="Quitar de favoritos"><i class="fa fa-minus-circle"></i>
-                    </button>
-                    <button id="btn_like" type="button" class="btn btn-success btn-circle btn-xl btn_like" title="Solicitar Adopción"><i class="fa fa-heart"></i>
-                    </button>
-                </div>
-            </div>
-        </div>
+    <div id="favs" style="padding-left:40%; margin-top:5%">
     </div>
 
     <!-- Optional JavaScript -->
-    
+    <script src="favoritos.js"></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
