DELETE Mascota en perfil

--- a/perfil.html
+++ b/perfil.html
@@ -143,7 +143,9 @@
             </div>
         </div>
     </div>
-
+    <!-- Modal 4 Eliminar mascota -->
+    <div id="modalEliminarMascota">
+    </div>
 
 
 
