--- a/favoritos.html
+++ b/favoritos.html
@@ -36,7 +36,7 @@
                 </li>
                 <li class="nav-item">
                     <!--BOTON Mensajes -->
-                        <a class="nav-link" href="mensajes.html"> <i class="fa fa-paw" aria-hidden="true"></i> Adopciones</a>
+                        <a class="nav-link" href="adopciones.html"> <i class="fa fa-paw" aria-hidden="true"></i> Adopciones</a>
                     </li>
                  <li class="nav-item">
                       <!--BOTON Configuración -->
