--- a/Configuración.html
+++ b/Configuración.html
@@ -124,12 +124,13 @@
                     </div>
                     <hr>
                 </form>
-                <div class="button">
-                      <a class="btn btn-primary btn-lg" href="#" role="button" id="btnGuardar" onclick="ActualizarUsuario()">Guardar</a>
-                  </div>
-                  <div class="button">
-                    <a class="btn btn-primary btn-lg" href="#" role="button" id="btnEliminar">Eliminar perfil</a>
+                <div style="float: left;">
+                    <buttontype="button" class="btn btn-success btn-circle" id="btnGuardar" onclick="ActualizarUsuario()"><i class="fa fa-check"></i></button>
                 </div>
+                <div style="float: right;">
+                    <buttontype="button" class="btn btn-danger btn-circle" data-toggle="modal" data-target="#modalEliminar"><i class="fa fa-trash"></i></button>
+                </div>
+            <br>
             </div>
         </td>
         <td class="columna_perfil" valign="top">
@@ -172,7 +173,8 @@
                             </label>
                         </div>
                     </div>
-      
+                    <div id="modalEliminarUsuario">
+                    </div>
                     <!-- <div class="form-group">
                         <label for="distancia">Edad</label>
                         <input type="range" class="form-control-range" id="distancia" name="distancia" value="50" min="1" max="100">
@@ -184,6 +186,7 @@
                 </form>
             </div>
         </td>
+    </tr>
 </table>
         <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
