--- a/principal.html
+++ b/principal.html
@@ -49,11 +49,11 @@
     </div>
     <!-- Botones dislike, superlike, like -->
     <div class="botones_likes">
-        <button id="btn_dislike"type="button" class="btn btn-danger btn-circle btn-xl btn_dislike" title="Siguiente"><i class="fa fa-times"></i>
+        <button id="btn_dislike"type="button" class="btn btn-danger btn-circle btn-xl btn_dislike" title="Siguiente" onclick="obtenerMascota()"><i class="fa fa-times"></i>
         </button>
         <button id="btn_superlike" type="button" class="btn btn-info btn-circle btn-xl btn_superlike" title="Añadir a favoritos" onclick="postFavs()"><i class="fa fa-star"></i>
         </button>
-        <button id="btn_like" type="button" class="btn btn-success btn-circle btn-xl btn_like" title="Solicitar Adopción"><i class="fa fa-heart"></i>
+        <button id="btn_like" type="button" class="btn btn-success btn-circle btn-xl btn_like" title="Solicitar Adopción" onclick="obtenerMascota()"><i class="fa fa-heart"></i>
         </button>
     </div>
 
