--- a/perfil.html
+++ b/perfil.html
@@ -138,6 +138,27 @@
                     <input type="date" name="Cumpleaños" id="cumpleañosM" class="form-control" aria-describedby="helpId">
                         </div>
                     </div>
+                    <div class="form-group form">
+                        <label for="Cumpleaños">Imágenes</label>
+                        <div class="input-group">
+                            <div class= "input-group-prepend">
+                                <span class="input-group-text" id="basic-addon1"> <i class="fas fa-camera"></i></span>
+                        </div>
+                            <input type="text" name="url1" id="url1" class="form-control" aria-describedby="helpId">
+                        </div>
+                        <div class="input-group">
+                            <div class= "input-group-prepend">
+                                <span class="input-group-text" id="basic-addon1"> <i class="fas fa-camera"></i></span>
+                        </div>
+                            <input type="text" name="url1" id="url1" class="form-control" aria-describedby="helpId">
+                        </div>
+                        <div class="input-group">
+                            <div class= "input-group-prepend">
+                                <span class="input-group-text" id="basic-addon1"> <i class="fas fa-camera"></i></span>
+                        </div>
+                            <input type="text" name="url1" id="url1" class="form-control" aria-describedby="helpId">
+                        </div>
+                    </div>
                     <hr>
                     <button type="submit" class="btn btn-light" data-dismiss="modal" id="submitM">Añadir</button>
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
