--- a/Configuración.html
+++ b/Configuración.html
@@ -122,6 +122,15 @@
                         <input type="text" name="urlP" id="urlP" class="form-control" aria-describedby="helpId">
                         </div>
                     </div>
+                    <div class="form-group form">
+                        <label for="Nombre">Ubicacion</label>
+                        <div class="input-group">
+                            <div class= "input-group-prepend">
+                                <span class="input-group-text" id="basic-addon1"> <i class="fas fa-map-marker"></i></span>
+                            </div>
+                        <input type="text" name="ubicacionP" id="ubicacionP" class="form-control" aria-describedby="helpId">
+                        </div>
+                    </div>
                     <hr>
                 </form>
                 <div style="float: left;">
