Editar usuario PUT

--- a/public/Configuración.html
+++ b/public/Configuración.html
@@ -79,7 +79,7 @@
                             <div class= "input-group-prepend">
                                 <span class="input-group-text" id="basic-addon1"> <i class="fas fa-envelope"></i></span>
                             </div>
-                        <input type="text" name="CorreoP" id="CorreoP" class="form-control" aria-describedby="helpId">
+                        <input type="text" name="CorreoP" id="CorreoP" class="form-control" aria-describedby="helpId" disabled >
                         </div>
                     </div>
                     <hr>
