--- a/public/perfil.html
+++ b/public/perfil.html
@@ -60,9 +60,10 @@
             </td>
             <td class="columna_mascotas">
                 <!-- Carta -->
+                <div class="scrolling-wrapper" id="insertarCartaMasc">
+
+                  </div>
                 
-                <div class="card" id="carta_mascota">       
-                </div>
             </td>
             <td class="columna_añadir">
                 <button id="btn_plus"type="button" class="btn btn-light btn-circle btn-xl" data-toggle="modal" data-target="#model3"><i class="fa fa-plus fa-3x"></i></button>
