--- a/public/principal.html
+++ b/public/principal.html
@@ -53,7 +53,7 @@
         </button>
         <button id="btn_superlike" type="button" class="btn btn-info btn-circle btn-xl btn_superlike" title="Añadir a favoritos" onclick="postFavs()"><i class="fa fa-star"></i>
         </button>
-        <button id="btn_like" type="button" class="btn btn-success btn-circle btn-xl btn_like" title="Solicitar Adopción" onclick="alertLike()"><i class="fa fa-heart"></i>
+        <button id="btn_like" type="button" class="btn btn-success btn-circle btn-xl btn_like" title="Solicitar Adopción" onclick="SolicitarAdopcion()"><i class="fa fa-heart"></i>
         </button>
     </div>
 
