--- a/public/perfil.html
+++ b/public/perfil.html
@@ -60,7 +60,7 @@
             </td>
             <td class="columna_mascotas">
                 <!-- Carta -->
-                <div class="scrolling-wrapper" id="insertarCartaMasc">
+                <div class="scrolling-wrapper" id="insertarCartaMasc" style="margin-right: 5% ; margin-left: 5%;">
 
                   </div>
                 
