--- a/public/principal.html
+++ b/public/principal.html
@@ -45,11 +45,11 @@
         </div>
     </nav>
     <!-- Carta -->
-    <div class="card" id ="carta_mascota" style="left: 41.7%;">
+    <div class="card" id ="carta_mascota"  style="left: 41.7%;">
     </div>
     <!-- Botones dislike, superlike, like -->
     <div class="botones_likes" style="left: 41.7%;">
-        <button id="btn_dislike"type="button" class="btn btn-danger btn-circle btn-xl btn_dislike" title="Siguiente" onclick="obtenerMascota()"><i class="fa fa-times"></i>
+        <button id="btn_dislike"type="button" class="btn btn-danger btn-circle btn-xl btn_dislike" title="Siguiente" onclick="siguienteMasc()"><i class="fa fa-times"></i>
         </button>
         <button id="btn_superlike" type="button" class="btn btn-info btn-circle btn-xl btn_superlike" title="Añadir a favoritos" onclick="postFavs()"><i class="fa fa-star"></i>
         </button>
