--- a/public/adopciones.html
+++ b/public/adopciones.html
@@ -77,9 +77,9 @@
 						<div>
 							<h3 style="color:white">&nbsp&nbsp&nbspCandidatos a adoptar</h3><hr>
 						</div>
-						<ul id="infoDisplay" style="list-style-type: none; padding-top: 10px;" >
+						<div class="ex1" id="infoDisplay">
 							
-						</ul>
+						</div>
 				</div>
 			</div>
 		</div>
