--- a/public/adopciones.html
+++ b/public/adopciones.html
@@ -75,7 +75,7 @@
 				<div class="col-md-8 col-xl-6 chat">
 					<div class="card">
 						<div>
-							<h3 style="color:white">&nbsp&nbsp&nbspCandidatos a adoptar</h3><hr>
+							<h3 style="color:white">&nbsp&nbsp&nbspCandidatos a adoptar</h3>
 						</div>
 						<div class="ex1" id="infoDisplay">
 							
