--- a/public/principal.html
+++ b/public/principal.html
@@ -45,7 +45,7 @@
         </div>
     </nav>
     <!-- Carta -->
-    <div class="card" id ="carta_mascota"  style="left: 41.7%;">
+    <div class="card" id ="carta_mascota"  style="left: 38%; margin: 3%;">
     </div>
     <!-- Botones dislike, superlike, like -->
     <div class="botones_likes" style="left: 41.7%;">
