--- a/public/principal.html
+++ b/public/principal.html
@@ -41,6 +41,10 @@
                     <!--BOTON Configuración -->
                     <a class="nav-link" href="Configuración.html"> <i class="fa fa-cog" aria-hidden="true"></i> Configuración</a>
                 </li>
+            </li>
+            <!--BOTON Configuración -->
+            <a class="nav-link" id="boton_logout" href="inicio.html"><i class="fas fa-sign-out-alt" aria-hidden="true"></i> Cerrar sesión</a>
+        </li>
             </ul>
         </div>
     </nav>
