--- a/public/adopciones.html
+++ b/public/adopciones.html
@@ -54,7 +54,11 @@
 						<!--BOTON Configuración -->
 						<a class="nav-link" href="Configuración.html"> <i class="fa fa-cog" aria-hidden="true"></i> Configuración</a>
 					</li>
-				</ul>
+				</li>
+				<!--BOTON Configuración -->
+				<a class="nav-link" id="boton_logout" href="inicio.html"><i class="fas fa-sign-out-alt" aria-hidden="true"></i> Cerrar sesión</a>
+			</li>
+				</ul>	
 			</div>
 		</nav>
 		<br>
