--- a/public/favoritos.html
+++ b/public/favoritos.html
@@ -42,6 +42,8 @@
                       <!--BOTON Configuración -->
                         <a class="nav-link" href="Configuración.html"> <i class="fa fa-cog" aria-hidden="true"></i> Configuración</a>
                      </li>
+                     <!--BOTON Configuración -->
+            <a class="nav-link" id="boton_logout" href="inicio.html"><i class="fas fa-sign-out-alt" aria-hidden="true"></i> Cerrar sesión</a>
             </ul>
         </div>
     </nav>
