--- a/public/perfil.html
+++ b/public/perfil.html
@@ -41,6 +41,10 @@
                      <!--BOTON Configuración -->
                      <a class="nav-link" href="Configuración.html"> <i class="fa fa-cog" aria-hidden="true"></i> Configuración</a>
                     </li>
+                </li>
+                <!--BOTON Configuración -->
+                <a class="nav-link" id="boton_logout" href="inicio.html"><i class="fas fa-sign-out-alt" aria-hidden="true"></i> Cerrar sesión</a>
+            </li>
             </ul>
         </div>
     </nav>
@@ -95,8 +99,6 @@
                                 <option value="5">Roedor</option>
                                 <option value="6">Arácnido</option>
                                 <option value="7">Pez</option>
-                                <option value="8">Todo</option>
-                                <option value="9">Otro</option>
                             </select>
                         </div>
                     </div>
