Ajustes para el 100 pt1

--- a/public/perfil.html
+++ b/public/perfil.html
@@ -65,9 +65,7 @@
             <td class="columna_mascotas">
                 <!-- Carta -->
                 <div class="scrolling-wrapper" id="insertarCartaMasc" style="margin-right: 5% ; margin-left: 5%;">
-
-                  </div>
-                
+                  </div>    
             </td>
             <td class="columna_añadir">
                 <button id="btn_plus"type="button" class="btn btn-light btn-circle btn-xl" data-toggle="modal" data-target="#model3"><i class="fa fa-plus fa-3x"></i></button>
@@ -168,7 +166,10 @@
             </div>
         </div>
     </div>
-    <!-- Modal 4 Eliminar mascota -->
+    <!-- Modal 4 Añadir Mascota -->
+    <div id="modalEditarMascota">
+    </div>
+    <!-- Modal 5 Eliminar mascota -->
     <div id="modalEliminarMascota">
     </div>
 
