--- a/public/principal.html
+++ b/public/principal.html
@@ -48,8 +48,10 @@
             </ul>
         </div>
     </nav>
+    <br>
+    <div id="banner" style="text-align: center; color: gray; font-weight: bold; font-size: large; ">
+    </div>
     <!-- Carta -->
-    
     <div class="card" id ="carta_mascota"  style="left: 38%; margin: 3%;">
     </div>
     <!-- Botones dislike, superlike, like -->
